
// project definition
Project WaProject_Database {
  database_type: 'PostgreSQL'
  Note: 'Database documentation for Wa Project Backend Challenge'
}


// tables creation
Table labs as LAB {
	id int [increment, not null, unique, primary key]
	name varchar(150) [not null]
	address varchar(255) [not null]
	status boolean [not null, default: true]
	created_at datetime [not null, default: `now()`]
	updated_at datetime [not null, default: `now()`]
}

Table exams as EXAM {
	id int [increment, not null, pk]
	name varchar(150) [not null]
	type varchar(50) [not null]
	status boolean [not null, default: true]
	created_at datetime [not null, default: `now()`]
	updated_at datetime [not null, default: `now()`]
}


// entities references (using table)
//  > : Many-to-One
//  < : One-to-Many
//  - : One-to-One
Table exam_lab {
	id int [increment, not null, pk]
  lab_id int [not null, ref: > labs.id]
  exam_id int [not null, ref: > exams.id]
}
